software/branches/1.3RC/interfaces/iMesh/spec/iMesh_new.h


typedef struct iMesh_Instance_Private* iMesh_Instance;
void iMesh_resetEntArrIter(
    iMesh_Instance instance, 
    iBase_EntityArrIterator entArr_iterator, 
    int* err  
);
void iMesh_endEntArrIter(
    iMesh_Instance instance, 
    iBase_EntityArrIterator entArr_iterator, 
    int* err  
);
void iMesh_getEntArrTopo(
    iMesh_Instance instance, 
    const iBase_EntityHandle* entity_handles, 
    const int entity_handles_size, 
    int** topology, 
    int* topology_allocated, 
    int* topology_size, 
    int* err  
);
void iMesh_getEntArrType(
    iMesh_Instance instance, 
    const iBase_EntityHandle* entity_handles, 
    const int entity_handles_size, 
    int** type, 
    int* type_allocated, 
    int* type_size, 
    int* err  
);
void iMesh_getEntArrAdj(
    iMesh_Instance instance, 
    const iBase_EntityHandle* entity_handles, 
    const int entity_handles_size, 
    const int entity_type_requested, 
    iBase_EntityHandle** adjacentEntityHandles, 
    int* adjacentEntityHandles_allocated, 
    int* adj_entity_handles_size, 
    int** offset, 
    int* offset_allocated, 
    int* offset_size, 
    int* err  
);
void iMesh_getEntArr2ndAdj(
     iMesh_Instance instance, 
    iBase_EntityHandle const* entity_handles, 
    int entity_handles_size, 
    int bridge_entity_type, 
    int requested_entity_type, 
    iBase_EntityHandle** adj_entity_handles, 
    int* adj_entity_handles_allocated, 
    int* adj_entity_handles_size, 
    int** offset, 
    int* offset_allocated, 
    int* offset_size, 
    int* err   
);
void iMesh_getAdjEntIndices(
    iMesh_Instance instance, 
    iBase_EntitySetHandle entity_set_handle, 
    int entity_type_requester, 
    int entity_topology_requester, 
    int entity_type_requested, 
    iBase_EntityHandle** entity_handles, 
    int* entity_handles_allocated, 
    int* entity_handles_size, 
    iBase_EntityHandle** adj_entity_handles, 
    int* adj_entity_handles_allocated, 
    int* adj_entity_handles_size, 
    int** adj_entity_indices, 
    int* adj_entity_indices_allocated, 
    int* adj_entity_indices_size, 
    int** offset, 
    int* offset_allocated, 
    int* offset_size, 
    int* err  
);
void iMesh_createEntSet(
    iMesh_Instance instance, 
    const int isList, 
    iBase_EntitySetHandle* entity_set_created, 
    int* err  
);
void iMesh_destroyEntSet(
    iMesh_Instance instance, 
    iBase_EntitySetHandle entity_set, 
    int* err  
);
void iMesh_isList(
    iMesh_Instance instance, 
    const iBase_EntitySetHandle entity_set, 
    int* is_list, 
    int* err  
);
void iMesh_getNumEntSets(
    iMesh_Instance instance, 
    const iBase_EntitySetHandle entity_set_handle, 
    const int num_hops, 
    int* num_sets, 
    int* err  
);
void iMesh_getEntSets(
    iMesh_Instance instance, 
    const iBase_EntitySetHandle entity_set_handle, 
    const int num_hops, 
    iBase_EntitySetHandle** contained_set_handles, 
    int* contained_set_handles_allocated, 
    int* contained_set_handles_size, 
    int* err  
);
void iMesh_addEntToSet(
    iMesh_Instance instance, 
    iBase_EntityHandle entity_handle, 
    iBase_EntitySetHandle entity_set, 
    int* err  
);
void iMesh_rmvEntFromSet(
    iMesh_Instance instance, 
    iBase_EntityHandle entity_handle, 
    iBase_EntitySetHandle entity_set, 
    int* err  
);
void iMesh_addEntArrToSet(
    iMesh_Instance instance, 
    const iBase_EntityHandle* entity_handles, 
    int entity_handles_size, 
    iBase_EntitySetHandle entity_set, 
    int* err  
);
void iMesh_rmvEntArrFromSet(
    iMesh_Instance instance, 
    const iBase_EntityHandle* entity_handles, 
    int entity_handles_size, 
    iBase_EntitySetHandle entity_set, 
    int* err  
);
void iMesh_addEntSet(
    iMesh_Instance instance, 
    iBase_EntitySetHandle entity_set_to_add, 
    iBase_EntitySetHandle entity_set_handle, 
    int* err  
);
void iMesh_rmvEntSet(
    iMesh_Instance instance, 
    iBase_EntitySetHandle entity_set_to_remove, 
    iBase_EntitySetHandle entity_set_handle, 
    int* err  
);
void iMesh_isEntContained(
    iMesh_Instance instance, 
    iBase_EntitySetHandle containing_entity_set, 
    iBase_EntityHandle contained_entity, 
    int* is_contained, 
    int* err  
);
void iMesh_isEntArrContained(
     iMesh_Instance instance, 
    iBase_EntitySetHandle containing_entity_set, 
    const iBase_EntityHandle* entity_handles, 
    int num_entity_handles, 
    int** is_contained, 
    int* is_contained_allocated, 
    int* is_contained_size, 
    int* err   
);