software/branches/1.3RC/interfaces/iMesh/examples/FindAdjacency/iMesh_iso.F03


     subroutine iMesh_resetEntArrIter ( instance, entArr_iterator, err ) 
       ! ,bind(C,name="iMesh_resetEntArrIter") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entArr_iterator
       integer(c_int), intent(out) :: err
     end subroutine iMesh_resetEntArrIter

     subroutine iMesh_endEntArrIter ( instance, entArr_iterator, err ) 
       ! ,bind(C,name="iMesh_endEntArrIter") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entArr_iterator
       integer(c_int), intent(out) :: err
     end subroutine iMesh_endEntArrIter

     subroutine iMesh_getEntArrTopo ( instance, entity_handles, entity_handles_size, topology, topology_allocated, topology_size, &
          err ) 
       ! ,bind(C,name="iMesh_getEntArrTopo") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handles
       integer(c_int), intent(in), value :: entity_handles_size
       type(c_ptr), intent(inout) :: topology
       integer(c_int), intent(inout) :: topology_allocated
       integer(c_int), intent(out) :: topology_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getEntArrTopo

     subroutine iMesh_getEntArrType ( instance, entity_handles, entity_handles_size, type, type_allocated, type_size, &
          err ) 
       ! ,bind(C,name="iMesh_getEntArrType") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handles
       integer(c_int), intent(in), value :: entity_handles_size
       type(c_ptr), intent(inout) :: type
       integer(c_int), intent(inout) :: type_allocated
       integer(c_int), intent(out) :: type_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getEntArrType

     subroutine iMesh_getEntArrAdj ( instance, entity_handles, entity_handles_size, entity_type_requested, &
          adjacentEntityHandles, adjacentEntityHandles_allocated, adj_entity_handles_size, &
          offset, offset_allocated, offset_size, err ) 
       ! ,bind(C,name="iMesh_getEntArrAdj") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handles
       integer(c_int), intent(in), value :: entity_handles_size
       integer(c_int), intent(in), value :: entity_type_requested
       type(c_ptr), intent(inout) :: adjacentEntityHandles
       integer(c_int), intent(inout) :: adjacentEntityHandles_allocated
       integer(c_int), intent(out) :: adj_entity_handles_size
       type(c_ptr), intent(inout) :: offset
       integer(c_int), intent(inout) :: offset_allocated
       integer(c_int), intent(out) :: offset_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getEntArrAdj

     subroutine iMesh_getEntArr2ndAdj ( instance, entity_handles, entity_handles_size, bridge_entity_type, requested_entity_type, &
          adj_entity_handles, adj_entity_handles_allocated, adj_entity_handles_size, &
          offset, offset_allocated, offset_size, err ) 
       ! ,bind(C,name="iMesh_getEntArr2ndAdj") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handles
       integer(c_int), intent(in), value :: entity_handles_size
       integer(c_int), intent(in), value :: bridge_entity_type
       integer(c_int), intent(in), value :: requested_entity_type
       type(c_ptr), intent(inout) :: adj_entity_handles
       integer(c_int), intent(inout) :: adj_entity_handles_allocated
       integer(c_int), intent(out) :: adj_entity_handles_size
       type(c_ptr), intent(inout) :: offset
       integer(c_int), intent(inout) :: offset_allocated
       integer(c_int), intent(out) :: offset_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getEntArr2ndAdj

     subroutine iMesh_getAdjEntIndices ( instance, entity_set_handle, entity_type_requestor, entity_topology_requestor, &
          entity_type_requested, entity_handles, entity_handles_allocated, entity_handles_size, &
          adj_entity_handles, adj_entity_handles_allocated, adj_entity_handles_size, &
          adj_entity_indices, adj_entity_indices_allocated, adj_entity_indices_size, &
          offset, offset_allocated, offset_size, err ) 
       ! ,bind(C,name="iMesh_getAdjEntIndices") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set_handle
       integer(c_int), intent(in), value :: entity_type_requestor
       integer(c_int), intent(in), value :: entity_topology_requestor
       integer(c_int), intent(in), value :: entity_type_requested
       type(c_ptr), intent(inout) :: entity_handles
       integer(c_int), intent(inout) :: entity_handles_allocated
       integer(c_int), intent(out) :: entity_handles_size
       type(c_ptr), intent(inout) :: adj_entity_handles
       integer(c_int), intent(inout) :: adj_entity_handles_allocated
       integer(c_int), intent(out) :: adj_entity_handles_size
       type(c_ptr), intent(inout) :: adj_entity_indices
       integer(c_int), intent(inout) :: adj_entity_indices_allocated
       integer(c_int), intent(out) :: adj_entity_indices_size
       type(c_ptr), intent(inout) :: offset
       integer(c_int), intent(inout) :: offset_allocated
       integer(c_int), intent(out) :: offset_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getAdjEntIndices

     subroutine iMesh_createEntSet ( instance, isList, entity_set_created, err ) 
       ! ,bind(C,name="iMesh_createEntSet") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       integer(c_int), intent(in), value :: isList
       type(c_ptr), intent(out) :: entity_set_created
       integer(c_int), intent(out) :: err
     end subroutine iMesh_createEntSet

     subroutine iMesh_destroyEntSet ( instance, entity_set, err ) 
       ! ,bind(C,name="iMesh_destroyEntSet") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set
       integer(c_int), intent(out) :: err
     end subroutine iMesh_destroyEntSet

     subroutine iMesh_isList ( instance, entity_set, is_list, err ) 
       ! ,bind(C,name="iMesh_isList") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set
       integer(c_int), intent(out) :: is_list
       integer(c_int), intent(out) :: err
     end subroutine iMesh_isList

     subroutine iMesh_getNumEntSets ( instance, entity_set_handle, num_hops, num_sets, err ) 
       ! ,bind(C,name="iMesh_getNumEntSets") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set_handle
       integer(c_int), intent(in), value :: num_hops
       integer(c_int), intent(out) :: num_sets
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getNumEntSets

     subroutine iMesh_getEntSets ( instance, entity_set_handle, num_hops, &
          contained_set_handles, contained_set_handles_allocated, contained_set_handles_size, &
          err ) 
       ! ,bind(C,name="iMesh_getEntSets") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set_handle
       integer(c_int), intent(in), value :: num_hops
       type(c_ptr), intent(inout) :: contained_set_handles
       integer(c_int), intent(inout) :: contained_set_handles_allocated
       integer(c_int), intent(out) :: contained_set_handles_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getEntSets

     subroutine iMesh_addEntToSet ( instance, entity_handle, entity_set, err ) 
       ! ,bind(C,name="iMesh_addEntToSet") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handle
       type(c_ptr), intent(in), value :: entity_set
       integer(c_int), intent(out) :: err
     end subroutine iMesh_addEntToSet

     subroutine iMesh_rmvEntFromSet ( instance, entity_handle, entity_set, err ) 
       ! ,bind(C,name="iMesh_rmvEntFromSet") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handle
       type(c_ptr), intent(in), value :: entity_set
       integer(c_int), intent(out) :: err
     end subroutine iMesh_rmvEntFromSet

     subroutine iMesh_addEntArrToSet ( instance, entity_handles, entity_handles_size, entity_set, &
          err ) 
       ! ,bind(C,name="iMesh_addEntArrToSet") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handles
       integer(c_int), intent(in), value :: entity_handles_size
       type(c_ptr), intent(in), value :: entity_set
       integer(c_int), intent(out) :: err
     end subroutine iMesh_addEntArrToSet

     subroutine iMesh_rmvEntArrFromSet ( instance, entity_handles, entity_handles_size, entity_set, &
          err ) 
       ! ,bind(C,name="iMesh_rmvEntArrFromSet") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handles
       integer(c_int), intent(in), value :: entity_handles_size
       type(c_ptr), intent(in), value :: entity_set
       integer(c_int), intent(out) :: err
     end subroutine iMesh_rmvEntArrFromSet

     subroutine iMesh_addEntSet ( instance, entity_set_to_add, entity_set_handle, err ) 
       ! ,bind(C,name="iMesh_addEntSet") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set_to_add
       type(c_ptr), intent(in), value :: entity_set_handle
       integer(c_int), intent(out) :: err
     end subroutine iMesh_addEntSet

     subroutine iMesh_rmvEntSet ( instance, entity_set_to_remove, entity_set_handle, err ) 
       ! ,bind(C,name="iMesh_rmvEntSet") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set_to_remove
       type(c_ptr), intent(in), value :: entity_set_handle
       integer(c_int), intent(out) :: err
     end subroutine iMesh_rmvEntSet

     subroutine iMesh_isEntContained ( instance, containing_entity_set, contained_entity, is_contained, &
          err ) 
       ! ,bind(C,name="iMesh_isEntContained") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: containing_entity_set
       type(c_ptr), intent(in), value :: contained_entity
       integer(c_int), intent(out) :: is_contained
       integer(c_int), intent(out) :: err
     end subroutine iMesh_isEntContained

     subroutine iMesh_isEntArrContained ( instance, containing_set, entity_handles, num_entity_handles, &
          is_contained, is_contained_allocated, is_contained_size, err ) 
       ! ,bind(C,name="iMesh_isEntArrContained") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: containing_set
       type(c_ptr), intent(in), value :: entity_handles
       integer(c_int), intent(in), value :: num_entity_handles
       type(c_ptr), intent(inout) :: is_contained
       integer(c_int), intent(inout) :: is_contained_allocated
       integer(c_int), intent(out) :: is_contained_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_isEntArrContained
